$Id: NEWS,v 1.182 2002-06-11 15:34:33 castaglia Exp $

CVS
---------------------------------
- Bug 1407 - Removed unnecessary check for prior PORT/PASV in STOR
             PRE_CMD handler (RETR PRE_CMD handler did not have these checks)
- Added new Define, <IfDefine>, <IfModule> configuration directives, new
  command-line option -D (a la Apache)
- Bug 1556 - Restructuring the way signals are handled, so that signal handling
             functions are executed synchronously, not asynchronously
- Bug 1463 - Added reporting of dispatching to auth handlers at debug level 6

1.2.5 - Released 2002-06-08
---------------------------------
New mod_sql (4.08)
- Bug 1379 - Changed mod_sql.c to use memset() instead of bzero()
- Bug 1576 - Checks for a NULL pointer in a border case involving use of
             SQLHomedirOnDemand
- Bug 1586 - Fixed bad assumption concerning row count involving SQL-provided
             group information
- Bug 1625 - Adds compatibility fix to mod_sql_mysql for older MySQL libraries
             (a function name changed in MySQL 3.23.14)

1.2.5rc3 - Released 2002-05-30
---------------------------------
New mod_ldap (2.8.6)
- Bug 1612 - Fixed logging of RFC931 usernames in xferlog
- Bug 1595 - Transfers that result in error conditions no longer cause
             the data connection to be closed prematurely via data_cleanup()
- Bug 1627 - Fixed bug in timer code where timers were being blocked
             indefinitely, manifesting as non-functioning idle timeouts
- Bug 1521 - Cleanup of function prototypes
- Bug 1379 - Changing remaining bzero/bcopy occurrences to memset/memcpy
- Bug 1394 - ftpstats program is not working

1.2.5rc2 - Released 2002-05-13
---------------------------------
- Added Andrew Houghton to the credits
- Added in the new format FAQ
- Bug 1580 - Minor additions to the RPM spec file to allow RPMs to be built
             by non-root users.
- Bug 1546 - PF_ARGV_WRITABLE, PF_ARGV_WRITEABLE are used mixed.  Fixed to