@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.182 2002-06-11 15:34:33 castaglia Exp $
+$Id: NEWS,v 1.183 2002-06-11 16:18:06 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -9,6 +9,7 @@ CVS
 - Bug 1556 - Restructuring the way signals are handled, so that signal handling
              functions are executed synchronously, not asynchronously
 - Bug 1463 - Added reporting of dispatching to auth handlers at debug level 6
+- Bug 1258 - Added STOU command handler
 
 1.2.5 - Released 2002-06-08
 ---------------------------------
